--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,16 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-<item
-    android:id="@+id/studentsFragment"
-    android:icon="@android:drawable/ic_dialog_dialer"
-    android:title="Home" />
-<item
-    android:id="@+id/addStudentFragment"
-    android:icon="@android:drawable/ic_menu_add"
-    android:title="Add Post" />
-<item
-    android:icon="@android:drawable/ic_menu_my_calendar"
-    android:title="Profile" />
+    <item
+        android:id="@+id/feedFragment"
+        android:icon="@android:drawable/ic_dialog_dialer"
+        android:title="@string/feed" />
+    <item
+        android:id="@+id/newPostFragment"
+        android:icon="@android:drawable/ic_menu_add"
+        android:title="@string/add_post" />
+    <item
+        android:id="@+id/mapViewFragment"
+        android:icon="@android:drawable/ic_menu_add"
+        android:title="@string/map"/>
+    <item
+        android:id="@+id/groupProfileFragment"
+        android:icon="@android:drawable/ic_menu_my_calendar"
+        android:title="@string/profile" />
 </menu>
