--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,7 +5,7 @@
     android:id="@+id/nav_graph"
     app:defaultNavHost="true"
     app:navGraph="@navigation/nav_graph"
-    app:startDestination="@id/startPageFragment">
+    app:startDestination="@id/postFragment">
 
     <fragment
         android:id="@+id/startPageFragment"
@@ -105,4 +105,13 @@
             android:id="@+id/action_feedFragment_to_newPostFragment"
             app:destination="@id/newPostFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/companyProfileFragment"
+        android:name="com.android.skillsync.CompanyProfileFragment"
+        android:label="fragment_post"
+        tools:layout="@layout/fragment_post" />
+    <fragment
+        android:id="@+id/postFragment"
+        android:name="com.android.skillsync.PostFragment"
+        android:label="PostFragment" />
 </navigation>
