--- a/app/src/main/res/layout/fragment_edit_post.xml
+++ b/app/src/main/res/layout/fragment_edit_post.xml
@@ -4,92 +4,99 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".NewPostFragment">
+    tools:context=".editPost">
 
     <ImageView
-    android:id="@+id/new_post_image"
-    android:layout_width="182dp"
-    android:layout_height="168dp"
-    android:layout_gravity="center_horizontal"
-    android:src="@drawable/new_post_icon"
-    app:layout_constraintBottom_toTopOf="@+id/new_post_title"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/edit_post_image"
+        android:layout_width="182dp"
+        android:layout_height="168dp"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/new_post_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/new_post_title"
+        android:id="@+id/edit_project_details"
         style="@style/AppTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:gravity="center_horizontal|top"
-        android:text="@string/post_new_project_title"
+        android:text="@string/edit_project_details"
         android:textAppearance="@style/log_in_text"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/new_post_image" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_post_image" />
 
     <TextView
-        android:id="@+id/new_post_description"
+        android:id="@+id/info_project"
         style="@style/AppTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:gravity="center_horizontal|top"
-        android:text="@string/post_new_project_text"
+        android:text="@string/add_the_information_about_the_project_that_you_want_to_create"
         android:textAppearance="@style/sign_in_description"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/new_post_title" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_project_details" />
 
     <include
-        android:id="@+id/post_title_group"
+        android:id="@+id/project_name"
         layout="@layout/custom_input_field_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="36dp"
+        app:layout_constraintBottom_toTopOf="@+id/save_post"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/new_post_description" />
+        app:layout_constraintTop_toBottomOf="@+id/info_project"
+        app:layout_constraintVertical_bias="0.0" />
 
     <include
-        android:id="@+id/post_description_group"
-        layout="@layout/custom_input_field_text"
+        android:id="@+id/multi_line_project_description"
+        layout="@layout/custom_multi_line_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="36dp"
+        app:layout_constraintBottom_toTopOf="@+id/save_post"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/post_title_group" />
+        app:layout_constraintTop_toBottomOf="@+id/project_name"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/image_to_upload"
+        android:layout_width="189dp"
+        android:layout_height="137dp"
         android:contentDescription="@string/image_s_post"
-        app:layout_constraintBottom_toTopOf="@+id/post_button"
+        android:src="@drawable/company_icon"
+        app:layout_constraintBottom_toTopOf="@+id/save_post"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/post_description_group"
-        app:layout_constraintVertical_bias="0.0"
-        android:src="@drawable/company_icon"
-        android:layout_width="189dp"
-        android:layout_height="137dp" />
+        app:layout_constraintTop_toTopOf="@+id/multi_line_project_description"
+        app:layout_constraintVertical_bias="0.744" />
 
     <Button
-        android:id="@+id/post_button"
+        android:id="@+id/save_post"
         style="@style/AppTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="80dp"
+        android:layout_marginBottom="92dp"
         android:background="@drawable/log_in_btn"
         android:gravity="center"
-        android:text="@string/post"
+        android:text="@string/edit_post"
+        android:textAppearance="@style/log_in_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/post_description_group"
-        app:layout_constraintVertical_bias="0.646" />
-
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
