--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -141,7 +141,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/poppins"
-                    android:text="About Project"
+                    android:text="@string/about_project"
                     android:textAlignment="viewStart"
                     android:textSize="20sp"
                     android:textStyle="bold"
