--- a/app/src/main/res/layout/fragment_pick_user_type.xml
+++ b/app/src/main/res/layout/fragment_pick_user_type.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
+
+    <ImageView
+        android:id="@+id/back_button"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/back_arrow_icon"
+        android:padding="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="Back" />
+
     <TextView
         android:id="@+id/pick_user_title"
         style="@style/AppTextStyle"
@@ -15,7 +26,7 @@
         android:text="@string/sign_up_as"
         android:textAppearance="@style/log_in_text"
         android:textStyle="bold"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
