--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -8,6 +8,18 @@
     tools:layout_editor_absoluteX="1dp"
     tools:layout_editor_absoluteY="33dp">
 
+
+    <ImageView
+        android:id="@+id/back_button"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/back_arrow_icon"
+        android:padding="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="Back" />
+
+
     <ImageView
         android:id="@+id/sign_in_image"
         android:layout_width="wrap_content"
