--- a/app/src/main/res/layout/fragment_map_view.xml
+++ b/app/src/main/res/layout/fragment_map_view.xml
@@ -30,6 +30,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+<!--            <androidx.viewpager.widget.ViewPager-->
+<!--                android:id="@+id/viewPager"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="100dp"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toTopOf="parent" />-->
+
             <!-- MaterialButton -->
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/feed_btn"
