pop up card on click pin

--- a/app/src/main/res/layout/card_view_location.xml
+++ b/app/src/main/res/layout/card_view_location.xml
@@ -1,27 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- card_company_info.xml -->
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp">
+    android:orientation="vertical"
+    android:padding="16dp">
 
-    <!-- Your layout for displaying location information goes here -->
     <TextView
-        android:id="@+id/locationNameTextView"
-        android:layout_width="match_parent"
+        android:id="@+id/textViewTitle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Location Name"
-        android:textSize="18sp"
         android:textStyle="bold"
-        android:padding="8dp"/>
+        android:textSize="18sp"
+        android:layout_marginBottom="8dp"/>
 
     <TextView
-        android:id="@+id/locationAddressTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Location Address"
-        android:textSize="16sp"
-        android:padding="8dp"/>
+        android:id="@+id/textViewBio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
-    <!-- Add more views as needed -->
-
-</androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/textViewAddress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+</LinearLayout>
