--- a/app/src/main/res/layout/fragment_group_profile.xml
+++ b/app/src/main/res/layout/fragment_group_profile.xml
@@ -49,10 +49,11 @@
             android:orientation="vertical"/>
 
             <ImageView
+                android:id="@+id/groupImage"
                 android:layout_width="110dp"
                 android:layout_height="110dp"
                 android:background="@drawable/collage_logo"
-                android:orientation="vertical"/>
+                android:orientation="vertical" />
         </androidx.cardview.widget.CardView>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -72,7 +73,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/poppins"
-            android:text="@string/develop_group"
+            android:text=""
             android:textAlignment="center"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -87,7 +88,7 @@
             android:layout_marginTop="-10dp"
             android:alpha="0.5"
             android:fontFamily="@font/poppins"
-            android:text="@string/collage_of_management"
+            android:text=""
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -95,11 +96,11 @@
 
         <TextView
             android:id="@+id/groupBio"
-            android:layout_width="292dp"
-            android:layout_height="47dp"
+            android:layout_width="294dp"
+            android:layout_height="111dp"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/poppins"
-            android:text="Four Software Engineering students, looking for a creative final project idea"
+            android:text=""
             android:textAlignment="center"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
