CompanyProfile: Added posts section

--- a/app/src/main/res/layout/fragment_company_profile.xml
+++ b/app/src/main/res/layout/fragment_company_profile.xml
@@ -91,5 +91,25 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/companyName" />
 
+        <TextView
+            android:id="@+id/postsTitle"
+            android:layout_width="356dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins"
+            android:text="Posts"
+            android:textAlignment="textStart"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/companyBio" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/companyPostsRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/postsTitle" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
