--- a/app/src/main/res/layout/fragment_group_profile.xml
+++ b/app/src/main/res/layout/fragment_group_profile.xml
@@ -106,6 +106,26 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/groupCollage" />
 
+        <TextView
+            android:id="@+id/groupPostsTitle"
+            android:layout_width="356dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins"
+            android:text="Posts"
+            android:textAlignment="textStart"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/groupBio" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/groupPostsRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/groupPostsTitle" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
