--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -108,12 +108,30 @@
         <action
             android:id="@+id/action_feedFragment_to_newPostFragment"
             app:destination="@id/newPostFragment" />
+        <action
+            android:id="@+id/action_feedFragment_to_companyProfileFragment"
+            app:destination="@id/companyProfileFragment" >
+            <argument
+                android:name="userId"
+                app:argType="string" />
+        </action>
+        <action
+            android:id="@+id/action_feedFragment_to_groupProfileFragment"
+            app:destination="@id/groupProfileFragment" >
+            <argument
+                android:name="userId"
+                app:argType="string" />
+        </action>
     </fragment>
     <fragment
         android:id="@+id/companyProfileFragment"
         android:name="com.android.skillsync.CompanyProfileFragment"
         android:label="fragment_post"
-        tools:layout="@layout/fragment_post" />
+        tools:layout="@layout/fragment_post" >
+        <action
+            android:id="@+id/action_companyProfileFragment_to_groupProfileFragment"
+            app:destination="@id/groupProfileFragment" />
+    </fragment>
     <fragment
         android:id="@+id/postFragment"
         android:name="com.android.skillsync.PostFragment"
