--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -28,6 +28,19 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imagePost"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    tools:srcCompat="@tools:sample/avatars" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -35,24 +48,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cardView2"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:orientation="vertical"
-                    app:cardCornerRadius="100dp"
-                    app:cardElevation="2dp">
-
-                    <ImageView
-                        android:id="@+id/ownerImage"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:alpha="0.4"
-                        app:srcCompat="@drawable/user_icon" />
-
-                </androidx.cardview.widget.CardView>
 
                 <TextView
                     android:id="@+id/ownerName"
@@ -80,6 +75,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="TextView" />
+
             </LinearLayout>
         </LinearLayout>
 
