--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".CompanyProfileFragment">
+    tools:context=".ProfileFragment">
 
     <ImageView
         android:id="@+id/back_button"
@@ -18,14 +18,15 @@
         android:contentDescription="Back" />
 
     <ImageView
-        android:id="@+id/company_profile_background_image"
+        android:id="@+id/profile_background_image"
         android:layout_width="413dp"
         android:layout_height="250dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/background_start_page" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="409dp"
@@ -37,10 +38,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/company_profile_background_image">
+        app:layout_constraintTop_toTopOf="@+id/profile_background_image">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cardView"
+            android:id="@+id/card_view"
             android:layout_width="110dp"
             android:layout_height="110dp"
             android:background="@drawable/ic_launcher_background"
@@ -53,12 +54,12 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
-                android:layout_width="110dp"
-                android:layout_height="110dp"
-                android:orientation="vertical"/>
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:orientation="vertical"/>
 
             <ImageView
-                android:id="@+id/companyImage"
+                android:id="@+id/profile_image"
                 android:layout_width="110dp"
                 android:layout_height="110dp"
                 android:orientation="vertical" />
@@ -76,7 +77,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
-            android:id="@+id/companyName"
+            android:id="@+id/profile_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -87,12 +88,26 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView" />
+            app:layout_constraintTop_toBottomOf="@+id/card_view" />
 
         <TextView
-            android:id="@+id/companyBio"
+            android:id="@+id/profile_additional_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-10dp"
+            android:alpha="0.5"
+            android:fontFamily="@font/poppins"
+            android:text=""
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/profile_name" />
+
+        <TextView
+            android:id="@+id/profile_bio"
             android:layout_width="294dp"
             android:layout_height="111dp"
+            android:layout_marginTop="8dp"
             android:fontFamily="@font/poppins"
             android:text=""
             android:textAlignment="center"
@@ -100,10 +115,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/companyName" />
+            app:layout_constraintTop_toBottomOf="@+id/profile_additional_info" />
 
         <TextView
-            android:id="@+id/postsTitle"
+            android:id="@+id/profile_posts_title"
             android:layout_width="356dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins"
@@ -111,16 +126,30 @@
             android:textAlignment="textStart"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/companyBio" />
+            app:layout_constraintTop_toBottomOf="@+id/profile_bio" />
+
+
+        <TextView
+            android:id="@+id/profile_no_posts_text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="No posts yet"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/profile_posts_title"
+            tools:visibility="invisible" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/companyPostsRecyclerView"
+            android:id="@+id/profile_posts_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/postsTitle" />
+            android:visibility="visible"
+            app:layout_constraintTop_toBottomOf="@+id/profile_posts_title">
+
+        </androidx.recyclerview.widget.RecyclerView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
