--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -13,12 +13,8 @@
         android:icon="@android:drawable/ic_menu_add"
         android:title="@string/map"/>
     <item
-        android:id="@+id/groupProfileFragment"
+        android:id="@+id/profileFragment"
         android:icon="@android:drawable/ic_menu_my_calendar"
         android:title="@string/profile" />
 
-    <item
-        android:id="@+id/companyProfileFragment"
-        android:icon="@android:drawable/ic_menu_my_calendar"
-        android:title="@string/profile" />
 </menu>
