--- a/app/src/main/res/layout/fragment_edit_company_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_company_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditGroupProfileFragment">
+    tools:context=".EditCompanyProfileFragment">
 
     <ImageView
         android:id="@+id/back_button"
@@ -42,16 +42,57 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edit_company_profile_title" />
 
-    <include
-        android:id="@+id/company_address"
-        layout="@layout/custom_input_field_text"
+    <TextView
+        android:id="@+id/input_suggestions"
+        style="@style/AppTextStyle"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_height="25dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:gravity="top"
+        android:text="@string/address"
+        android:textColor="@color/Dark_Gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/company_name" />
+        app:layout_constraintTop_toBottomOf="@id/company_name"/>
+
+    <AutoCompleteTextView
+        android:id="@+id/companySuggestion"
+        style="@style/AppTextStyle"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/add_error_message"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/input_suggestions" />
+
+    <View
+        android:id="@+id/add_edit_text_line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginStart="8dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:background="@color/Light_Gray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/companySuggestion" />
+    <TextView
+        android:id="@+id/add_error_message"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text=""
+        android:textColor="@color/red"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/add_edit_text_line" />
 
     <include
         android:id="@+id/company_bio"
@@ -62,7 +103,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/company_address" />
+        app:layout_constraintTop_toBottomOf="@id/add_error_message" />
 
 
     <Button
