--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.SkillSync" parent="Theme.Material3.DayNight">
+    <style name="Base.Theme.SkillSync" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
 <!--        <item name="colorPrimary">#030446</item>-->
         <item name="colorPrimaryDark">#3700B3</item>
