--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -49,7 +49,11 @@
         android:id="@+id/profileFragment"
         android:name="com.android.skillsync.ProfileFragment"
         android:label="fragment_profile"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_profile" >
+        <action
+            android:id="@+id/action_profileFragment_to_startPageFragment"
+            app:destination="@id/startPageFragment" />
+    </fragment>
     <fragment
         android:id="@+id/signUpCompanyFragment"
         android:name="com.android.skillsync.SignUpCompanyFragment"
