--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -65,9 +65,9 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            android:orientation="vertical"/>
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:orientation="vertical" />
 
             <ImageView
                 android:id="@+id/profile_image"
@@ -167,6 +167,25 @@
 
         </androidx.recyclerview.widget.RecyclerView>
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/logout_button"
+            android:layout_width="fill_parent"
+            android:layout_height="45dp"
+            android:layout_marginBottom="80dp"
+            android:paddingTop="15dp"
+            android:text="Log Out"
+            android:textAlignment="center"
+            android:textColor="#D16666"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
