on post click - show owner profile

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -49,10 +49,13 @@
         android:id="@+id/profileFragment"
         android:name="com.android.skillsync.ProfileFragment"
         android:label="fragment_profile"
-        tools:layout="@layout/fragment_profile" >
+        tools:layout="@layout/fragment_profile">
         <action
             android:id="@+id/action_profileFragment_to_startPageFragment"
             app:destination="@id/startPageFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_feedFragment"
+            app:destination="@id/feedFragment" />
     </fragment>
     <fragment
         android:id="@+id/signUpCompanyFragment"
@@ -110,7 +113,7 @@
             app:destination="@id/newPostFragment" />
         <action
             android:id="@+id/action_feedFragment_to_ProfileFragment"
-            app:destination="@id/profileFragment" >
+            app:destination="@id/profileFragment">
             <argument
                 android:name="userId"
                 app:argType="string" />
