--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,17 +7,6 @@
     tools:context=".ProfileFragment">
 
     <ImageView
-        android:id="@+id/back_button"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:src="@drawable/back_arrow_icon"
-        android:padding="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:visibility="invisible"
-        android:contentDescription="Back" />
-
-    <ImageView
         android:id="@+id/profile_background_image"
         android:layout_width="413dp"
         android:layout_height="250dp"
@@ -179,13 +168,23 @@
             android:layout_height="45dp"
             android:layout_marginBottom="80dp"
             android:paddingTop="15dp"
-            android:text="Log Out"
+            android:text="@string/log_out"
             android:textAlignment="center"
             android:textColor="#D16666"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
+            android:id="@+id/back_button"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:contentDescription="@string/back"
+            android:padding="16dp"
+            android:visibility="gone"
+            android:src="@drawable/back_arrow_icon"
+            tools:layout_editor_absoluteX="4dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
